# pixmap-ops

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pixmap_art.cpp  pixmap_test.cpp  ppm_image.cpp  ppm_image.h
images/: earth-ascii.ppm  soup-ascii.ppm
